Updated Appointments with minimum functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/nakedapp
+spring.datasource.username=ec2-user
+spring.datasource.password=INSERT PASSWORD HERE
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
