--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/nakedapp
+spring.datasource.url=jdbc:postgresql://localhost:5432/appointments
 spring.datasource.username=ec2-user
 spring.datasource.password=INSERT PASSWORD HERE
 spring.jpa.hibernate.ddl-auto=none
